--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+
+  <title>We Donate</title>
 </head>
+
 <body>
-  
+<section>
+  <h1>Let's Help Those Who Are More In Need</h1>
+  <p>
+    More people are suffering because of the disasters happening from the nature. So in nowadays world more and more people are in need of help.We in <strong>WE DONATE</strong> take your donation and find the right people to serve your purpose of helping them.
+  </p>
+</section>
 </body>
+
 </html>
