mistakes but uploading

--- a/index.html
+++ b/index.html
@@ -14,12 +14,22 @@
 </head>
 
 <body>
-<section>
-  <h1>Let's Help Those Who Are More In Need</h1>
-  <p>
-    More people are suffering because of the disasters happening from the nature. So in nowadays world more and more people are in need of help.We in <strong>WE DONATE</strong> take your donation and find the right people to serve your purpose of helping them.
-  </p>
-</section>
+  <section class="home-page">
+    <div class="main-text">
+      <h1>Let's Help Those Who Are More In Need</h1>
+      <p>
+        More people are suffering because of the disasters happening from the nature. So in nowadays world more and more
+        people are in need of help.We in <strong>WE DONATE</strong> take your donation and find the right people to
+        serve
+        your purpose of helping them.
+      </p>
+    </div>
+
+    <div class="button">
+      <a target="_blank" href="https://www.google.com">Donate Now</a>
+    </div>
+
+  </section>
 </body>
 
 </html>
