--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 <body>
   <section class="home-page">
     <div class="main-text">
-      <h1>Let's Help Those Who Are More In Need</h1>
-      <p>
+      <h1>Let's Help Those </h1>
+      <h1>Who Are More In Need</h1>
+      <p class="short-text">
         More people are suffering because of the disasters happening from the nature. So in nowadays world more and more
         people are in need of help.We in <strong>WE DONATE</strong> take your donation and find the right people to
         serve
         your purpose of helping them.
       </p>
+      <a class="button" target="_blank" href="https://www.google.com">Donate Now</a>
     </div>
 
-    <div class="button">
-      <a target="_blank" href="https://www.google.com">Donate Now</a>
-    </div>
+
 
   </section>
 </body>
