--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
       </p>
       <a class="button" target="_blank" href="https://www.google.com">Donate Now</a>
     </div>
-
-
-
+  </section>
+  <section>
+    <h1>Donate Today</h1>
+    <p>You are free to donate any amount. but we would prefer you to choose from these options or choose your amount.</p>
+    <div>
+      <input type="button">
+      <button>200$</button>
+      <button>500$</button>
+      <button>1000$</button>
+    </div>
   </section>
 </body>
 
