--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <section class="home-page">
     <div class="main-text">
-      <h1>Let's Help Those </h1>
+      <h1 class="main-header">Let's Help Those </h1>
       <h1>Who Are More In Need</h1>
       <p class="short-text">
         More people are suffering because of the disasters happening from the nature. So in nowadays world more and more
